src/test/deca/context/valid/with_object/public_heritage.deca
class A {
    void method(){
        print("ok");
    }
    int method2(){
        return 1;
    }
}

class B extends A {
    void method3(){
        print("ok");
    }
}

{
    B b = new B();

    b.method();
    b.method3();
    print(b.method2());
}