src/test/deca/context/invalid/oracle/redefinition_method2.deca
class A{
    int x(){
        return 1;
    }
}

class B extends A{
    void x(){
        println("Hello World!");
    }
}